bases/haproxy-ingress/default-backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ingress-default-backend
  sessionAffinity: None
  type: ClusterIP
  clusterIP: None
