bases/haproxy-ingress/haproxy-ingress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.$(DOMAIN)"
    external-dns.alpha.kubernetes.io/ttl: "60"
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
spec:
  type: LoadBalancer
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  selector:
    run: haproxy-ingress
