bases/haproxy-ingress/haproxy-network-policy.yaml
---
kind: NetworkPolicy
apiVersion:  "networking.k8s.io/v1"
metadata:
  name: allow-all-to-haproxy-ingress
spec:
  podSelector:
    matchLabels:
      tier: ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 443
